--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <nav class="w3-sidebar w3-collapse w3-red w3-top w3-large" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="margin-top:8px;font-size:16px">☰</a>
   <div class="w3-container w3-center" style="margin-bottom:26px">
-    <img src="/images/side_logo.png">
+    <img style="width:234px;height:180px" src="/images/side_logo.svg">
   </div>
   <div class="w3-bar-block">
     <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a>
@@ -31,7 +31,7 @@
 <!-- Header (small screens) -->
 <header class="w3-container w3-top w3-hide-large w3-padding w3-red" style="width:100%;height:60px" id="myOverlay">
   <a href="javascript:void(0)" onclick="w3_open()" class="w3-button w3-red w3-display-topleft" style="margin-top:8px;font-size:16px">☰</a>
-  <img style="margin-left:34px;margin-top:0px" src="/images/top_logo.png">
+  <img style="width:268px;height:41px;margin-left:34px;margin-top:0px" src="/images/top_logo.svg">
 </header>
 
 <!-- !PAGE CONTENT! -->
