--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <p style="font-size:12px;margin-top:0px;margin-bottom:14px">Dennis Shoemaker</p>
     </div>
     <div style="display:inline-block;flex:0;">
-      <div style=width:360px;white-space:pre-wrap;font-size:14px>We are a family owned and operated painting company, founded in 1975 by Dennis Shoemaker and now ran with the help of his two sons Darrell and Samuel. We strive to provide quality workmanship and great service to you, our customers.</div>
+      <div style=width:360px;white-space:pre-wrap;font-size:14px>We are a family owned and operated painting company that was founded in 1975 by Dennis Shoemaker. We strive to provide quality workmanship and great service to you, our customers.</div>
     </div>
   </div>
   
@@ -56,13 +56,14 @@
     <hr class="w3-round" style="width:50px;border:5px solid black">
     <p style="margin-top:0px;margin-bottom:0px">We provide the following services:</p>
     <ul style="margin-top:2px;margin-bottom:0px">
-        <li>Interior and Exterior Painting</li>
+        <li><b>Interior Painting</b> (ceilings, walls, trim, doors, cabinets, etc)</li>
         <li>Drywall and Plaster Repair</li>
         <li>Wallpaper Removal</li>
         <li>Refinishing</li>
-        <li>Exterior Wood Repair/Replacement</li>
+        <li><b>Exterior Painting</b></li>
         <li>Pressure Washing</li>
         <li>Deck Staining/Sealing</li>
+        <li>Exterior Wood Repair and Replacement</li>
     </ul>
     <p>If you have any questions or would like to schedule a free estimate, please leave us a message with your name and phone number and we will get back to you as soon as possible.</p>
     <p style="display:inline-block;margin-top:0px;font-weight:bold">Phone </p>
