--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <div class="w3-main" style="margin-left:340px;margin-right:40px">
   <!-- Home -->
   <div class="w3-container w3-padding">
-    <h1 style="font-weight:bold;font-size:18px;margin-top:54px;margin-bottom:0px">Professional Painting Company Serving the McLean-Woodford County Area</h1>
+    <h1 style="font-weight:bold;font-size:18px;margin-top:54px;margin-bottom:0px">Professional Painting Company Serving McLean-Woodford County, Illinois</h1>
   </div>
   <div class="w3-container" style="margin-top:12px">
     <div style="display:inline-block;vertical-align:top;">
@@ -46,7 +46,7 @@
       <p style="font-size:12px;margin-top:0px;margin-bottom:14px">Dennis Shoemaker</p>
     </div>
     <div style="display:inline-block;flex:0;">
-      <div style=width:360px;white-space:pre-wrap;font-size:14px>We are a family owned and operated painting company that was founded in 1975 by Dennis Shoemaker. We strive to provide quality workmanship and great service to you, our customers.</div>
+      <div style=width:360px;white-space:pre-wrap;font-size:14px>We are a family-owned-and-operated painting company founded in 1975 by Dennis Shoemaker and located in Normal, Illinois. We strive to provide quality craftsmanship and excellent service to you, our customers.</div>
     </div>
   </div>
   
@@ -65,7 +65,7 @@
         <li>Deck Staining/Sealing</li>
         <li>Exterior Wood Repair and Replacement</li>
     </ul>
-    <p>If you have any questions or would like to schedule a free estimate, please leave us a message with your name and phone number and we will get back to you as soon as possible.</p>
+    <p>If you have any questions or would like to schedule a free estimate, please leave us a message with your name and phone number, we will get back to you as soon as possible.</p>
     <p style="display:inline-block;margin-top:0px;font-weight:bold">Phone </p>
     <p style="display:inline-block;margin-top:0px">(309) 888-9102</p>
   </div>
