--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <img style="width:234px;height:180px" src="/images/side_logo.svg">
   </div>
   <div class="w3-bar-block">
-    <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a>
+    <a href="#home" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a>
     <a href="#services" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Services</a>
     <a href="#gallery" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Gallery</a>
   </div>
@@ -35,7 +35,7 @@
 </header>
 
 <!-- !PAGE CONTENT! -->
-<div class="w3-main" style="margin-left:340px;margin-right:40px">
+<div class="w3-main" style="margin-left:340px;margin-right:40px" id="home">
   <!-- Home -->
   <div class="w3-container w3-padding">
     <h1 style="font-weight:bold;font-size:18px;margin-top:54px;margin-bottom:0px">Professional Painting Company Serving McLean-Woodford County, Illinois</h1>
